crates/ferrum-interfaces/tests/ui/vnext/fail/operation_planning_handle_cannot_be_constructed.rs
use ferrum_interfaces::vnext::*;

fn forge(registry: &dyn OperationPlanningRegistry) {
    let _ = OperationPlanningHandle { registry };
}

fn main() {}
